# aruco_localization

./: CMakeLists.txt  README.md  package.xml
camera_info/: chiny_cam.yaml
include/aruco_localization/: ArucoLocalizer.h
launch/: aruco.launch  aruco_live_test.launch
matlab/: quat2angle.m  quatnormalize.m  test.m
msg/: MarkerMeasurement.msg  MarkerMeasurementArray.msg
src/: aruco_localization_node.cpp  aruco_test.cpp
src/aruco_localization/: ArucoLocalizer.cpp
